Fix cells to be vertically align in the middle

--- a/app/assets/stylesheets/scalient/ui/_data_table.scss
+++ b/app/assets/stylesheets/scalient/ui/_data_table.scss
@@ -28,6 +28,7 @@ $data-table-breakpoint-max: $screen-sm-max;
     border-top: 1px solid $data-table-border-color;
     border-bottom: 1px solid $data-table-border-color;
     font-weight: bold;
+    vertical-align: middle;
 
     &:first-child {
       border-top-left-radius: $data-table-border-radius;
@@ -48,6 +49,7 @@ $data-table-breakpoint-max: $screen-sm-max;
     border-right: 1px solid $data-table-border-color;
     border-bottom: 1px solid $data-table-border-color;
     font-weight: bold;
+    vertical-align: middle;
 
     &:first-child {
       border-bottom-left-radius: $data-table-border-radius;
@@ -80,6 +82,7 @@ $data-table-breakpoint-max: $screen-sm-max;
   border-right: 1px solid $data-table-border-color;
   border-bottom: 1px solid $data-table-border-color;
   word-wrap: break-word;
+  vertical-align: middle;
 }
 
 .data-table.data-striped {
